Finish The Design of PDF and The icon and name and mobile app test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "cupertino",
         "Schyler",
         "screenutil"
-    ]
+    ],
+    "cmake.sourceDirectory": "D:/Flutter Projects/booking_calender/windows/flutter"
 }
