--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,81 @@
 {
     "cSpell.words": [
         "cupertino",
+        "OUMAAIMA",
+        "Rajhi",
         "Schyler",
-        "screenutil"
+        "screenutil",
+        "TALEB",
+        "أميمة",
+        "إجمالي",
+        "إضافية",
+        "اختياري",
+        "استرجاع",
+        "الآيبان",
+        "الأخيرة",
+        "الأولى",
+        "الافتراضية",
+        "البنكي",
+        "التالية",
+        "التجارية",
+        "التحقق",
+        "التغييرات",
+        "الجزيرة",
+        "الحالية",
+        "الحساب",
+        "الخاص",
+        "الدفع",
+        "الدفعة",
+        "الراجحي",
+        "الساعات",
+        "السلامة",
+        "العرض",
+        "العملة",
+        "العميل",
+        "الفنية",
+        "القائمة",
+        "القاعة",
+        "القيمة",
+        "اللي",
+        "المالية",
+        "المبلغ",
+        "المحدث",
+        "المحفوظ",
+        "المحفوظة",
+        "المذكورة",
+        "المرجعي",
+        "المصرفية",
+        "المعلومات",
+        "الموديل",
+        "الموقع",
+        "النخلة",
+        "بالمؤسسة",
+        "بتحويل",
+        "بموجب",
+        "تراها",
+        "تعميدنا",
+        "توسيع",
+        "حالة",
+        "حساب",
+        "دالة",
+        "دفعات",
+        "ديمة",
+        "شركة",
+        "طريقة",
+        "عميل",
+        "قديمة",
+        "كانت",
+        "لإنشاء",
+        "لتجنب",
+        "مؤسسة",
+        "مساعدة",
+        "مصرف",
+        "مهمة",
+        "موافقتكم",
+        "موجود",
+        "نختار",
+        "والتفضل",
+        "يرجى"
     ],
     "cmake.sourceDirectory": "D:/Flutter Projects/booking_calender/windows/flutter"
 }
