Add Details under Calender for each month, replace delete with archive for quotations and add installments for normal clients

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Schyler",
         "screenutil",
         "TALEB",
+        "أرشفة",
         "أميمة",
         "إجمالي",
         "إضافية",
@@ -13,7 +14,10 @@
         "استرجاع",
         "الآيبان",
         "الأخيرة",
+        "الأرشفة",
+        "الأرشيف",
         "الأولى",
+        "الاسترجاع",
         "الافتراضية",
         "البنكي",
         "التالية",
@@ -52,10 +56,13 @@
         "بالمؤسسة",
         "بتحويل",
         "بموجب",
+        "تأكيد",
         "تراها",
+        "تريد",
         "تعميدنا",
         "توسيع",
         "حالة",
+        "حذفه",
         "حساب",
         "دالة",
         "دفعات",
@@ -74,6 +81,7 @@
         "موافقتكم",
         "موجود",
         "نختار",
+        "نهائيا",
         "والتفضل",
         "يرجى"
     ],
