Some Editing for Pdf And Update and Archive Functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "cupertino",
+        "Dimah",
         "OUMAAIMA",
         "Rajhi",
         "Schyler",
@@ -9,6 +10,7 @@
         "أرشفة",
         "أميمة",
         "إجمالي",
+        "إضافة",
         "إضافية",
         "اختياري",
         "استرجاع",
@@ -64,6 +66,7 @@
         "حالة",
         "حذفه",
         "حساب",
+        "حفلة",
         "دالة",
         "دفعات",
         "ديمة",
